@@ -21,7 +21,7 @@ public class NameEnFilter implements Filter {
             System.out.println("Name-EN: " + c);
             List<String> modifiedParts = IntStream.range(0, parts.size())
                     .filter(i -> i != deleteIndex)
-                    .mapToObj(parts::get).toList();
+                    .mapToObj(parts::get).collect(Collectors.toList());
 
             return modifiedParts.stream().collect(Collectors.joining("\n"));
         }
