@@ -22,7 +22,7 @@ public class WebsiteFilter implements Filter {
             System.out.println("Website: " + c);
             List<String> modifiedParts = IntStream.range(0, parts.size())
                     .filter(i -> i != deleteIndex)
-                    .mapToObj(parts::get).toList();
+                    .mapToObj(parts::get).collect(Collectors.toList());
 
             return modifiedParts.stream().collect(Collectors.joining("\n"));
         }
